--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "hexo": "^3.2.0",
     "hexo-abbrlink": "^2.0.5",
-    "hexo-asset-image": "https://github.com/CodeFalling/hexo-asset-image",
+    "hexo-asset-image": "^0.0.3",
     "hexo-deployer-git": "^0.3.1",
     "hexo-filter-github-emojis": "^1.4.4",
     "hexo-generator-archive": "^0.1.4",
